<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activity.RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/logo"
        style="@style/image_logo"
        android:src="@drawable/logo_size"
        android:contentDescription="@string/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/tv_register"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:alpha="0" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tv_username"
        style="@style/attribute_page_login"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:inputType="textEmailAddress"
        android:hint="@string/username_hint"
        android:alpha="0"/>

    <TextView
        style="@style/attribute_page_login"
        android:id="@+id/tv_email"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"/>

    <com.frhnfath.storyappfix.customview.EmailEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"
        android:alpha="0"/>

    <TextView
        style="@style/attribute_page_login"
        android:id="@+id/tv_password"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"/>

    <com.frhnfath.storyappfix.customview.PasswordEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_6_characters_minimum"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        android:alpha="0"/>

    <com.frhnfath.storyappfix.customview.CustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        android:layout_marginTop="10dp"
        android:alpha="0" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:text="@string/ask_sign"
        android:layout_marginTop="20dp"
        android:alpha="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_button"
        android:layout_marginTop="10dp"
        app:circularflow_radiusInDP="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        android:text="@string/sign_in"
        android:alpha="0" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>